# sdli

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
assets/: assets.rc
assets/fonts/: config.json
assets/strings/: en-US.json
cmake/: deps.cmake
cmake/toolchain/: x86_64-w64-mingw32.cmake
scripts/: gen-assets-c.sh  gen-strings.py
src/: main.c
src/assets/: assets.c  assets.h
src/sdli/: app.c  app.h  assets.c  assets.h  controller-fwd.h  node_notation.c  node_notation.h  strings.c  strings.h  style.c  style.h  util.c  util.h
src/sdli/model/: controller_input_model.c  controller_list.c  controller_list_model.c  model.h  system_model.c
src/sdli/page/: controller_info_page.c  controller_list_page.c  page.c  page.h  system_page.c
src/sdli/screen/: controller_config_screen.c  controller_events_screen.c  home_screen.c  screen.c  screen.h
src/sdli/vuid/: texture_cache.c  texture_cache.h  vuid_sdl3.c  vuid_sdl3.h
src/sdli/widget/: button.c  list_item.c  navigator.c  overlay.c  select.c  state.c  widget.h
src3/vuid/: vuid.c  vuid.h  vuid_config.h  vuid_sdl3.c  vuid_sdl3.h  vuid_sdl3_renderer.c  vuid_sdl3_renderer.h
